# distri-with-setuptools

./: .gitignore  README.md  pyproject.toml  setup.py
src/sample/: __init__.py  add_one.py
